<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.aldan.sysseed.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"/>

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <Button
                android:id="@+id/register"
                style="?android:textAppearanceSmall"
                android:layout_width="148dp"
                android:layout_height="53dp"
                android:text="@string/action_register"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="164dp"
                tools:layout_editor_absoluteY="130dp" />

            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="312dp"
                android:layout_height="41dp"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                tools:layout_editor_absoluteY="18dp"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                tools:layout_editor_absoluteX="-137dp" />


            <EditText
                android:id="@+id/password"
                android:layout_width="312dp"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                tools:layout_editor_absoluteY="70dp"
                tools:layout_editor_absoluteX="8dp" />


            <Button
                android:id="@+id/sign_in"
                style="?android:textAppearanceSmall"
                android:layout_width="137dp"
                android:layout_height="53dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold"
                tools:layout_editor_absoluteY="130dp"
                tools:layout_editor_absoluteX="16dp" />

            <Button
                android:id="@+id/login_with_google"
                android:layout_width="312dp"
                android:layout_height="wrap_content"
                android:text="@string/login_google"
                tools:layout_editor_absoluteY="199dp"
                tools:layout_editor_absoluteX="8dp" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</LinearLayout>
